# asio-quickjs-ng

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  build-hono.ps1  build.ps1  compile_commands.json  demo.js  hono.js  setup-vcpkg.ps1  setup-vcpkg.sh  uncrustify.cfg  vcpkg.json
cmake/: FindOpenSSL.cmake  embed_hono.cmake  embed_js.cmake
docs/: host-job-scheduler.md  server-runtime.md  wpt-fetch-status.md  wpt-fetch.md
src/: asio_executor.hpp  binary_store.cpp  binary_store.hpp  channel.hpp  crypto.cpp  crypto.hpp  curl_http.hpp  curl_runtime.cpp  curl_runtime.hpp  fetch.cpp  fetch.hpp  fs.cpp  fs.hpp  function_registry.cpp  function_registry.hpp  host.cpp  host.hpp  host_manager.cpp  host_manager.hpp  job.hpp  main.cpp  qjs.hpp  qjs_module.cpp
src/js/: abort.js  body_polyfill.js  buffer.js  crypto.js  fetch.js  headers.js  hono.bundle.js  http.js  request.js  response.js  text-encoding-polyfill.js  whatwg-url-polyfill.js
src/net/: http_server.cpp  http_server.hpp
tests/: http_test_server.hpp  node_fixture.hpp  test-hono.js  test_base64.cpp  test_binary_store.cpp  test_channel.cpp  test_crypto.cpp  test_fetch.cpp  test_fs.cpp  test_function_registry.cpp  test_host_id.cpp  test_host_manager.cpp  test_http.cpp  test_json.cpp  test_two_qjs.cpp  test_wpt_fetch.cpp
tests/wpt/: manifest.txt  node_test_server.mjs  shell_bootstrap.js  testharnessreport.js
tests/wpt/local/: abort-basic.any.js  abort-network.any.js  external-smoke.any.js  http-basic.any.js  response-guard.any.js
